<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DummyHelloWorld</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>
    <string name="paulo">Paulo</string>
    <string name="btn_text">Click</string>
    <string name="btn_toast">Toast</string>
    <string name="btn_mail">Envia Mail</string>
    <string name="btn_mudaActivity">Muda ecra</string>
    <string name="ecra2">Ecra 2</string>
    <string name="bt_ecra1">Volta Inicio</string>
    <string name="btn_mudaActivity1">Ecra mails</string>
    <string name="my_edit_text_hint">Escreva texto mail aqui</string>
    <string name="btn_del">DEL</string>
    <string name="my_user_signature_summary">Write your signature.</string>
    <string name="my_user_signature_title">Digital Signature</string>
    <string name="my_button_open_prefs">Preferences</string>
    
    <string name="my_add_contac_menu">add contact</string>
    <string name="my_open_prefs_id">open prefs</string>
    
    <string name="my_button_start_alarm">Alarm</string>

</resources>
